the book controller having issues with the get method
