# swagger.json
@@ -160,7 +160,7 @@
         }
       }
     },
-    "/books/{id}": {
+    "/books/{bookId}": {
       "get": {
         "tags": [
           "Books"
@@ -168,7 +168,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "bookId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -178,6 +178,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -185,9 +188,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/books/{bookId}": {
+      },
       "put": {
         "tags": [
           "Books"
@@ -226,6 +227,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -256,6 +260,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
